<resources>
    <string name="helloworld">Hello world</string>
    <string name="app_name">OpenClassTutorial</string>
    <string name="presentation">Bonjour, je m\'appelle <b>\"%1s\"</b>. J\'ai %2$d ans</string>
    <string name="valid">Valider</string>
    <string name="poids">Poids :</string>
    <string name="taille">Taille :</string>
    <string name="text_empty">aucune données à afficher</string>
    <string name="default_lorem">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un peintre anonyme assembla ens</string>
    <string-array name="planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_category_1">Catégorie 1</string>
    <string name="summary_pref_checkbox">Le résumé de la première checkbox</string>
    <string name="title_pref_checkbox">Case à cocher</string>
    <string name="summary_pref_simple">résumé pref simple</string>
    <string name="title_pref_simple">titre pref simple</string>
    <string name="summary_pref_switch">le résumé du switch</string>
    <string name="switch_off_switch">arret</string>
    <string name="switch_on_switch">marche</string>
    <string name="title_pref_switch">le titre du switch</string>
</resources>
